# aws-lambda-python-poetry-template

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
cdk/: package-lock.json
cdk/lib/: cdk-stack.ts
