[tool.poetry]
name = "aws-lambda-python-poetry-template"
version = "0.1.0"
description = ""
authors = ["andy <andy@zent.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
